// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StealthCopiable should renders correctly 1`] = `
<DocumentFragment>
  .cache-2iejn1 {
  display: block;
  position: relative;
  white-space: nowrap;
}

.cache-2iejn1:hover .elgyjs72 {
  opacity: 1;
  cursor: pointer;
}

.cache-oldbq4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-16n6zl0 {
  background-color: transparent;
  border: none;
  color: #4f0599;
  display: inline-block;
  padding-left: 8px;
  opacity: 0;
  z-index: 100;
}

.cache-16n6zl0:focus {
  opacity: 1;
}

<div
    class="cache-2iejn1 elgyjs70"
  >
    Hello
    <span
      class="cache-oldbq4 elgyjs71"
    >
      <button
        class="cache-16n6zl0 elgyjs72"
        tabindex="0"
        type="button"
      >
        Copy
      </button>
    </span>
  </div>
</DocumentFragment>
`;

exports[`StealthCopiable should renders correctly with a complex children 1`] = `
<DocumentFragment>
  .cache-2iejn1 {
  display: block;
  position: relative;
  white-space: nowrap;
}

.cache-2iejn1:hover .elgyjs72 {
  opacity: 1;
  cursor: pointer;
}

.cache-oldbq4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-16n6zl0 {
  background-color: transparent;
  border: none;
  color: #4f0599;
  display: inline-block;
  padding-left: 8px;
  opacity: 0;
  z-index: 100;
}

.cache-16n6zl0:focus {
  opacity: 1;
}

<div
    class="cache-2iejn1 elgyjs70"
  >
    <span
      class="cache-oldbq4 elgyjs71"
    >
      <button
        class="cache-16n6zl0 elgyjs72"
        tabindex="0"
        type="button"
      >
        Copied
      </button>
    </span>
    <div>
      <span>
        Hello
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StealthCopiable should renders correctly with custom side 1`] = `
<DocumentFragment>
  .cache-2iejn1 {
  display: block;
  position: relative;
  white-space: nowrap;
}

.cache-2iejn1:hover .elgyjs72 {
  opacity: 1;
  cursor: pointer;
}

.cache-oldbq4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-16n6zl0 {
  background-color: transparent;
  border: none;
  color: #4f0599;
  display: inline-block;
  padding-left: 8px;
  opacity: 0;
  z-index: 100;
}

.cache-16n6zl0:focus {
  opacity: 1;
}

<div
    class="cache-2iejn1 elgyjs70"
  >
    <span
      class="cache-oldbq4 elgyjs71"
    >
      <button
        class="cache-16n6zl0 elgyjs72"
        tabindex="0"
        type="button"
      >
        Copy
      </button>
    </span>
    Hello
  </div>
</DocumentFragment>
`;

exports[`StealthCopiable should renders correctly with custom side 2`] = `
<DocumentFragment>
  .cache-2iejn1 {
  display: block;
  position: relative;
  white-space: nowrap;
}

.cache-2iejn1:hover .elgyjs72 {
  opacity: 1;
  cursor: pointer;
}

.cache-oldbq4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-16n6zl0 {
  background-color: transparent;
  border: none;
  color: #4f0599;
  display: inline-block;
  padding-left: 8px;
  opacity: 0;
  z-index: 100;
}

.cache-16n6zl0:focus {
  opacity: 1;
}

<div
    class="cache-2iejn1 elgyjs70"
  >
    <span
      class="cache-oldbq4 elgyjs71"
    >
      <button
        class="cache-16n6zl0 elgyjs72"
        tabindex="0"
        type="button"
      >
        Copied
      </button>
    </span>
    Hello
  </div>
</DocumentFragment>
`;
